--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Gradle_Reflect</name>
+	<name>Gradle_Lambda</name>
 	<comment>Project Gradle_Reflect created by Buildship.</comment>
 	<projects>
 	</projects>
